src/imageProcessor/ImageProcessor.css
:root {
    --breaking-width: 870px;
}

.image-processor-area {
    position: relative;
    margin: 2.5% 5%;

}

.image-area {
    border: solid 2px #888;
    border-radius: 0.5em;
    width: 60%;
    overflow: hidden;
}

.image-area > img {
    width: 100%;
}

.slider-panel {
    position:  absolute;
    top: 2vw;
    right: 1em;
    display: inline-block;
    border: solid 1px #A88;
    width: 30%;
    border-radius: 0.5em;
    padding: 1em;
    text-align: left;
    background-color: #eee;
}

@media screen and (max-width: 870px)  {

    .slider-panel {
        position:  static;
        display: block;
        width: 70%;
        margin-left:  auto;
        margin-right: auto;
    }

    .image-area {
        width:    80%;
        margin-left:  auto;
        margin-right: auto;
        margin-bottom: 5vw;
        overflow: hidden;
    }
}

@media screen and (max-width: 870px) and (orientation: landscape) {
    .slider-panel {
        position:  absolute;
        top:   -1em;
        right: 0;
        display: inline-block;
        width: 30%;
        font-size: small;
    }

    .image-area {
        position:  absolute;
        top:   0;
        left:  0;
        width: 60%;
    }

}

